Update workflow file for Azure deployment

--- a/.github/workflows/main_eatjoy-kel6.yml
+++ b/.github/workflows/main_eatjoy-kel6.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy PHP app to Azure Web App - eatjoy-kelompok6
+name: Build and deploy PHP app to Azure Web App - eatjoy-kel6
 
 on:
   push:
@@ -64,7 +64,8 @@ jobs:
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
-          app-name: 'eatjoy-kelompok6'
+          app-name: 'eatjoy-kel6'
           slot-name: 'Production'
           package: .
+
           
